[gd_scene load_steps=6 format=3 uid="uid://sbavbjalqk4i"]

[ext_resource type="Script" path="res://Scripts/decks.gd" id="1_avd0p"]
[ext_resource type="Texture2D" uid="uid://lgy0xfym0cnx" path="res://Assets/DoorBack.jpg" id="1_ich4r"]
[ext_resource type="Texture2D" uid="uid://bm1g4bm7mmv01" path="res://Assets/fondo_deck.png" id="1_jnvcl"]
[ext_resource type="Texture2D" uid="uid://dco0xwl61evcd" path="res://Assets/TreasureBack.jpg" id="3_1nxte"]
[ext_resource type="Script" path="res://Scenes/BORRAR.gd" id="5_ucbnm"]

[node name="Decks" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_avd0p")

[node name="Fondo" type="Sprite2D" parent="."]
scale = Vector2(0.26, 0.26)
texture = ExtResource("1_jnvcl")

[node name="DeckDoors" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -126.0
offset_top = -77.0
offset_right = -26.0
offset_bottom = 156.0
theme_override_constants/separation = 1

[node name="ExampleDoor" type="Control" parent="DeckDoors"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sprite3" type="Sprite2D" parent="DeckDoors/ExampleDoor"]
texture = ExtResource("1_ich4r")
centered = false

[node name="DeckTreasures" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 32.0
offset_top = -77.0
offset_right = 132.0
offset_bottom = 156.0
theme_override_constants/separation = 1

[node name="ExampleTreasure" type="Control" parent="DeckTreasures"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sprite" type="Sprite2D" parent="DeckTreasures/ExampleTreasure"]
texture = ExtResource("3_1nxte")
centered = false

[node name="DiscardPileDoors" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = -286.0
offset_top = -77.0
offset_right = -186.0
offset_bottom = 156.0
theme_override_constants/separation = 1

[node name="ExampleDiscardDoor" type="Control" parent="DiscardPileDoors"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Sprite" type="Sprite2D" parent="DiscardPileDoors/ExampleDiscardDoor"]
texture = ExtResource("1_ich4r")
centered = false

[node name="DiscardPileTreasures" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 192.0
offset_top = -77.0
offset_right = 292.0
offset_bottom = 156.0
theme_override_constants/separation = 1

[node name="ExampleDiscardTreasure" type="Control" parent="DiscardPileTreasures"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Sprite" type="Sprite2D" parent="DiscardPileTreasures/ExampleDiscardTreasure"]
texture = ExtResource("3_1nxte")
centered = false

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 338.0
offset_top = -97.0
offset_right = 378.0
offset_bottom = -57.0
script = ExtResource("5_ucbnm")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DrawDoor" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "ROBAR PUERTA"

[node name="DiscardDoor" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "DESCARTAR PUERTA"

[node name="DrawTreasure" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "ROBAR TESORO"

[node name="DiscardTreasure" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "DESCARTAR TESORO"

[node name="door" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -439.0
offset_top = -35.0
offset_right = -399.0
offset_bottom = -12.0

[node name="treasure" type="Label" parent="Control"]
unique_name_in_owner = true
offset_left = -275.0
offset_top = -37.0
offset_right = -235.0
offset_bottom = -14.0

[connection signal="pressed" from="Control/VBoxContainer/DrawDoor" to="Control" method="_on_draw_door_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DiscardDoor" to="Control" method="_on_discard_door_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DrawTreasure" to="Control" method="_on_draw_treasure_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DiscardTreasure" to="Control" method="_on_discard_treasure_pressed"]
